Added inventory viewer role and gave that role access to the inventory page.

--- a/Thermory.Web/Views/User/Index.cshtml
+++ b/Thermory.Web/Views/User/Index.cshtml
@@ -35,7 +35,7 @@
 </div>
 
 <script type="text/javascript">
-    var roles = ['Inventory Master', 'Warehouse Crew'];
+    var roles = ['Inventory Master', 'Inventory Viewer', 'Warehouse Crew'];
     var currentUser = null;
 
     $(document).ready(function () {
