--- a/Thermory.Web/Views/Shared/Order/_MiscellaneousLineItemForm.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_MiscellaneousLineItemForm.cshtml
@@ -18,13 +18,33 @@
             var lineItem = Model.MiscellaneousLineItems == null ? null : Model.MiscellaneousLineItems.SingleOrDefault(li => li.MiscellaneousProductId == miscProduct.Id);
             var orderQuantity = lineItem == null ? 0 : lineItem.Quantity;
             var lineItemId = lineItem == null ? Guid.Empty : lineItem.Id;
+            var onHandId = string.Format("quantityOnHand{0}", miscProduct.Id);
             <tr>
                 <td class="productType">@miscProduct.Name (@miscProduct.Description)</td>
-                <td class="productType">@miscProduct.Quantity</td>
                 <td class="productType">
-                    <div style="width: 100px;"><input type="text" name="miscQty" id="@lineItemId" productId="@miscProduct.Id" class="form-control" maxlength="6" pattern="[0-9]*" value="@orderQuantity" /></div>
+                    <input type="hidden" id="@onHandId" value="@miscProduct.Quantity" />
+                    @miscProduct.Quantity
+                </td>
+                <td class="productType">
+                    <div style="width: 100px;"><input type="text" name="miscQty" id="@lineItemId" productid="@miscProduct.Id" class="form-control" maxlength="6" pattern="[0-9]*" value="@orderQuantity" onchange="lumberProductQuantityChanged('@miscProduct.Id');" /></div>
                 </td>
             </tr>
         }
     }
 </table>
+<script>
+    function lumberProductQuantityChanged(productId) {
+        $('input[productId="' + productId + '"]').each(function(key, value) {
+            var pieces = parseInt($(this).val());
+            if ('@Model.ValidateQuantityOnHand' == 'True') {
+                var quantityOnHandId = 'quantityOnHand' + productId;
+                var qtyOnHand = parseInt($('#' + quantityOnHandId).val());
+                if (qtyOnHand < pieces) {
+                    $(this).parent().closest('div').addClass('has-error');
+                } else {
+                    $(this).parent().closest('div').removeClass('has-error');
+                }
+            }
+        });
+    }
+</script>
