Fixed the highlighting of errors by moving the overwritten style to the Site.css.

--- a/Thermory.Web/Content/Site.css
+++ b/Thermory.Web/Content/Site.css
@@ -946,6 +946,10 @@ td.totalPieceHeading {
         background-color: #d2691e;
         border-color: #a0522d;
     }
+
+.has-error .form-control {
+    background-color: yellow;
+}
     
 .glyphicon-default {
     color: #777;
