--- a/Thermory.Web/Views/Shared/Order/Form.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Form.cshtml
@@ -86,7 +86,7 @@
             </tr>
             <tr>
                 <td>
-                    <label for="addressLine1">Weight (lbs)</label>
+                    <label for="packagingTypeWeight">Weight (lbs)</label>
                 </td>
                 <td>
                     <input type="text" id="packagingTypeWeight" class="form-control numeric" />
