--- a/Thermory.Web/Views/Catalog/_LumberSubCategoryForm.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberSubCategoryForm.cshtml
@@ -50,11 +50,11 @@
         </tr>
         <tr>
             <td>
-                <label>Weight (pounds per linear foot)</label>
+                <label>Weight (lbs/LF)</label>
             </td>
             <td>
                 <div class="lumberSubCategoryView" id="@string.Format("weightView{0}", Model.SubCategory.Id)">@Model.SubCategory.Weight</div>
-                <input type="text" class="form-control lumberSubCategoryForm numeric" id="@string.Format("weight{0}", Model.SubCategory.Id)" value="@Model.SubCategory.Weight" maxlength="10" pattern="[0-9]*" placeholder="Weight (pounds per linear foot)" />
+                <input type="text" class="form-control lumberSubCategoryForm numeric" id="@string.Format("weight{0}", Model.SubCategory.Id)" value="@Model.SubCategory.Weight" maxlength="10" pattern="[0-9]*" placeholder="Weight (lbs/LF)" />
             </td>
         </tr>
     </table>
