--- a/Thermory.Web/Views/Account/Register.cshtml
+++ b/Thermory.Web/Views/Account/Register.cshtml
@@ -8,7 +8,7 @@
     <h2>Create a new account.</h2>
 </hgroup>
 
-<form id="myForm">
+<form id="registerForm" method="POST">
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
@@ -36,7 +36,7 @@
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
         </ol>
-        <div type="button" class="btn btn-primary" onclick="$('#myForm').submit();">
+        <div type="button" class="btn btn-primary" onclick="$('#registerForm').submit();">
             <span class="glyphicon glyphicon-ok"></span> Register
         </div>
     </fieldset>
