Removed margins from packing slip print out so it is printed in the center of the page.

--- a/Thermory.Web/Views/PackingSlip/Index.cshtml
+++ b/Thermory.Web/Views/PackingSlip/Index.cshtml
@@ -21,8 +21,8 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/thermory")
 </head>
-<body style="width: 50%; margin: 0 auto;">
-    <table style="width: 8in;">
+<body>
+    <table>
         <tr>
             <td class="packingSlipCell">&nbsp;</td>
             <td class="packingSlipCell" colspan="2">
