--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -16,11 +16,31 @@
 </h3>
 @if (@Model.Order.Customer != null)
 {
-    <h5>Customer: @Model.Order.Customer.Name</h5>
+    <hr style="margin-bottom: -5px;" />
+    <div class="row">
+        <div class="col-md-2"><h5><strong>Customer:</strong></h5></div>
+        <div class="col-md-10"><h5>@Model.Order.Customer.Name</h5></div>
+    </div>
+    <div class="row">
+        <div class="col-md-2">&nbsp;</div>
+        <div class="col-md-10"><h5>@Model.Order.Customer.AddressLine1</h5></div>
+    </div>
+    <div class="row">
+        <div class="col-md-2">&nbsp;</div>
+        <div class="col-md-10"><h5>@Model.Order.Customer.AddressLine2</h5></div>
+    </div>
 }
 @if (@Model.Order.PackagingType != null)
 {
-    <h5>Packaging Type: @Model.Order.PackagingType.Name</h5>
+    <hr style="margin-bottom: -5px;" />
+    <div class="row">
+        <div class="col-md-2"><h5><strong>Packaging Type:</strong></h5></div>
+        <div class="col-md-10"><h5>@Model.Order.PackagingType.Name</h5></div>
+    </div>
+    <div class="row">
+        <div class="col-md-2">&nbsp;</div>
+        <div class="col-md-10"><h5>@Model.Order.PackagingType.Weight lbs</h5></div>
+    </div>
 }
 <nav class="navbar navbar-default" style="padding: 0 10px 10px 10px; margin-top: 10px;">
     <table>
@@ -283,13 +303,13 @@
             {
                 <div id="packingSlips" class="tab-pane">
                     @if (User.IsInRole(Role.InventoryMaster) || User.IsInRole(Role.WarehouseCrew))
-                          {
-                              <div style="padding: 5px 5px 0 5px;">
-                                  <div type="button" class="btn btn-primary" onclick="window.location=('@Url.Action("Package", "SalesOrder")/@Model.Order.Id');">
-                                      <span class="glyphicon glyphicon-edit"></span> Edit packaging slip(s)
-                                  </div>
-                              </div>
-                          }
+                    {
+                        <div style="padding: 5px 5px 0 5px;">
+                            <div type="button" class="btn btn-primary" onclick="window.location=('@Url.Action("Package", "SalesOrder")/@Model.Order.Id');">
+                                <span class="glyphicon glyphicon-edit"></span> Edit packaging slip(s)
+                            </div>
+                        </div>
+                    }
                     @foreach (var package in Model.Order.Packages)
                     {
                         <div style="padding: 5px 5px 0 5px;">
