--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -37,10 +37,13 @@
         <div class="col-md-2"><h5><strong>Packaging Type:</strong></h5></div>
         <div class="col-md-10"><h5>@Model.Order.PackagingType.Name</h5></div>
     </div>
-    <div class="row">
-        <div class="col-md-2">&nbsp;</div>
-        <div class="col-md-10"><h5>@Model.Order.PackagingType.Weight lbs</h5></div>
-    </div>
+    if (@Model.Order.PackagingType.Weight != null)
+    {
+        <div class="row">
+            <div class="col-md-2">&nbsp;</div>
+            <div class="col-md-10"><h5>@Model.Order.PackagingType.Weight lbs</h5></div>
+        </div>
+    }
 }
 <nav class="navbar navbar-default" style="padding: 0 10px 10px 10px; margin-top: 10px;">
     <table>
