--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -1,194 +1,7 @@
-﻿@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <div class="title">
-                <h1>Progress Report</h1>
-            </div>
-            <p>
-                Hey guys! Here is a list of features that I've completed. If you're feeling ambitions
-                and have some spare time, maybe you can try see if you can spot the changes and try
-                out any new features.
-            </p>
-        </div>
-    </section>
-}
-<h3>Progress Report:</h3>
-<ul>
-    <li>
-        <h5>6/26/2016</h5>
-        <ul>
-            <li>Completed packing slip print out. Allowed packing slips to be edited.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>6/24/2016</h5>
-        <ul>
-            <li>Completed packing slip creation.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>6/6/2016</h5>
-        <ul>
-            <li>Completed order status transitions other than packing slip creation.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>5/16/2016</h5>
-        <ul>
-            <li>Added bundle size to lumber sub categories and use it to show pack size on inventory, inventory audit, and orders.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>5/15/2016</h5>
-        <ul>
-            <li>Added ability to add and edit miscellaneous product catalog.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>5/13/2016</h5>
-        <ul>
-            <li>
-                Lumber catalog is completely functional.
-                <ul>
-                    <li>Added ability to add/edit lumber types.</li>
-                    <li>Added ability to add/edit lumber products.</li>
-                </ul>
-            </li>
-        </ul>
-    </li>
-    <li>
-        <h5>5/12/2016</h5>
-        <ul>
-            <li>Added ability to add and edit lumber sub categories.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>5/11/2016</h5>
-        <ul>
-            <li>Added ability to add and edit lumber categories.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>5/6/2016</h5>
-        <ul>
-            <li>Added ability to edit user roles.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>4/17/2016</h5>
-        <ul>
-            <li>Added users grid.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>4/10/2016</h5>
-        <ul>
-            <li>Broke up purchase orders and sales orders into separate pages.</li>
-            <li>Added packaging type to orders.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>4/3/2016</h5>
-        <ul>
-            <li>Added transaction history to order review.</li>
-            <li>Calculate order linear feet and square feet on the fly.</li>
-            <li>Added highlighting to sales order amounts over the quantity on hand.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>4/3/2016</h5>
-        <ul>
-            <li>Added transaction history to order review.</li>
-            <li>Calculate order linear feet and square feet on the fly.</li>
-            <li>Added highlighting to sales order amounts over the quantity on hand.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>4/1/2016</h5>
-        <ul>
-            <li>Added customers to order.</li>
-            <li>Added error handling page.</li>
-            <li>Added page not found page.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>3/31/2016</h5>
-        <ul>
-            <li>Completed order review.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>3/4/2016</h5>
-        <ul>
-            <li>Added orders page with grid listing all orders.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>2/29/2016</h5>
-        <ul>
-            <li>Added create order.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>2/22/2016</h5>
-        <ul>
-            <li>
-                Finished logging transaction details.
-                <ul>
-                    <li>Logs previous and new quantity for each product quantity modified via inventory audit.</li>
-                </ul>
-            </li>
-        </ul>
-    </li>
-    <li>
-        <h5>2/20/2016</h5>
-        <ul>
-            <li>Finished adding miscellaneous items to the audit form.</li>
-            <li>Required user to login.</li>
-            <li>Added user registration page.</li>
-            <li>Added inventory audit table to record when and who makes inventory changes.</li>
-            <li>
-                When saving the inventory audit form an inventory transaction is created.
-                <ul>
-                    <li><em>Need to finish adding inventory detail records (each quantity that changes as part of the save).</em></li>
-                </ul>
-            </li>
-        </ul>
-    </li>
-    <li>
-        <h5>2/17/2016</h5>
-        <ul>
-            <li>Added miscellaneous products to inventory worksheet.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>2/9/2016</h5>
-        <ul>
-            <li>Completed inventory audit save for lumber products.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>1/29/2016</h5>
-        <ul>
-            <li>Completed lumber calculations on the inventory worksheet.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>1/16/2016</h5>
-        <ul>
-            <li>Added inventory quantities to lumber products.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>1/13/2016</h5>
-        <ul>
-            <li>Completed adding lumber inventory into database.</li>
-        </ul>
-    </li>
-    <li>
-        <h5>1/13/2016</h5>
-        <ul>
-            <li>Finished inventory worksheet layout (quantities and calculated values N/A for now).</li>
-        </ul>
-    </li>
-</ul>
+﻿<div class="title">
+    <h1>Welcome to Thermory's inventory management system!</h1>
+</div>
+<br/>
+<p>
+    Click a link in the menu above to get started. 
+</p>
