--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -8,9 +8,10 @@
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/w2ui-css")
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/jqueryui")
 
-    @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/w2ui")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/thermory")
