--- a/Thermory.Web/Views/Catalog/_MiscCatalog.cshtml
+++ b/Thermory.Web/Views/Catalog/_MiscCatalog.cshtml
@@ -102,7 +102,7 @@
         };
 
         $.ajax({
-            type: 'PUT',
+            type: 'POST',
             url: '@Url.Action("SaveMiscellaneousCategory", "Catalog")',
             data: category,
             dataType: 'text',
@@ -134,7 +134,7 @@
         };
 
         $.ajax({
-            type: 'PUT',
+            type: 'POST',
             url: '@Url.Action("SaveMiscellaneousSubCategory", "Catalog")',
             data: subCategory,
             dataType: 'text',
@@ -174,7 +174,7 @@
         };
 
         $.ajax({
-            type: 'PUT',
+            type: 'POST',
             url: '@Url.Action("SaveMiscellaneousProduct", "Catalog")',
             data: product,
             dataType: 'text',
