--- a/Thermory.Web/Views/User/Index.cshtml
+++ b/Thermory.Web/Views/User/Index.cshtml
@@ -88,7 +88,7 @@
         }
 
         $.ajax({
-            type: 'PUT',
+            type: 'POST',
             url: '@Url.Action("Save", "User")',
             data: currentUser,
             dataType: 'text',
